--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,31 @@
-version: "3.7"
-
+version: "3"
 services:
-  postgres:
-    image: postgres:16-alpine
-    environment:
-      - POSTGRES_PASSWORD=postgres_password
-
-  redis:
-    image: redis:latest
-
-  api:
-    build:
-      context: ./server
-      dockerfile: Dockerfile.dev
-    volumes:
-      - /app/node_modules
-      - ./server:/app
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - PGUSER=postgres
-      - PGPASSWORD=postgres_password
-      - PGHOST=postgres
-      - PGPORT=5432
-      - PGDATABASE=postgres
-
   client:
-    build:
-      context: ./client
-      dockerfile: Dockerfile.dev
-    volumes:
-      - /app/node_modules
-      - ./client:/app
+    image: "rallycoding/multi-client"
+    mem_limit: 128m
+    hostname: client
+  server:
+    image: "rallycoding/multi-server"
+    mem_limit: 128m
+    hostname: api
     environment:
-      - WDS_SOCKET_PORT=0
-
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$REDIS_PORT
+      - PGUSER=$PGUSER
+      - PGHOST=$PGHOST
+      - PGDATABASE=$PGDATABASE
+      - PGPASSWORD=$PGPASSWORD
+      - PGPORT=$PGPORT
   worker:
-    build:
-      context: ./worker
-      dockerfile: Dockerfile.dev
-    volumes:
-      - /app/node_modules
-      - ./worker:/app
+    image: "rallycoding/multi-worker"
+    mem_limit: 128m
+    hostname: worker
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$REDIS_PORT
   nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile.dev
-    restart: always
+    image: "rallycoding/multi-nginx"
+    mem_limit: 128m
+    hostname: nginx
     ports:
-      - 80:80
+      - "80:80"
