--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,15 @@ after_success:
   - docker push garvitmaloo21/nginx-router
   - docker push garvitmaloo21/express-server
   - docker push garvitmaloo21/worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "multi-container-service"
+  env: "Multi-container-service-env"
+  bucket_name: "elasticbeanstalk-ap-south-1-437306485629 "
+  bucket_path: "multi-docker-container-service"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
